# PatternGoF

./: CMakeLists.txt  L1.cpp  L1.h  README.md  main.cpp
src/: main.cpp
